Fix content getting cut off and add bg image

--- a/html_gen/static/css/_defaults.scss
+++ b/html_gen/static/css/_defaults.scss
@@ -29,7 +29,7 @@ body {
 html,
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 /* Tags sorted alphabetically */
