--- a/html_gen/static/css/styles.scss
+++ b/html_gen/static/css/styles.scss
@@ -15,13 +15,6 @@
 
 /* Smaller modules can be include directly */
 
-.surface-container-wrapper {
-  background-color: $clr-surface-container;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 .link {
   color: $clr-primary;
   text-decoration: underline;
